--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="jumbotron jumbotron-bg">
     <div class="container">
       <h1>Bienvenidos a Calzado CIARI</h1>
-      <p class="lead" style="color:white;">Encuentra los zapatos perfectos para dama y aprovecha nuestros servicios de reparación de calzado.</p>
+      <p class="lead" style="color:white">Encuentra los zapatos perfectos para dama y aprovecha nuestros servicios de reparación de calzado.</p>
       <p><a class="btn btn-secondary btn-lg" href="catalogo.html" role="button">Ver Catálogo</a></p>
     </div>
   </div>
