--- a/catalogo.html
+++ b/catalogo.html
@@ -48,19 +48,19 @@
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal1">
               <img src="img/1.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://wa.link/wefkez" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal2">
               <img src="img/3.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal3">
               <img src="img/4.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
         </div>
@@ -74,13 +74,13 @@
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal5">
               <img src="img/6.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal6">
               <img src="img/7.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
         </div>
@@ -88,37 +88,37 @@
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal7">
               <img src="img/8.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal8">
               <img src="img/10.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal9">
               <img src="img/24.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal10">
               <img src="img/20.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal11">
               <img src="img/21.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
           <div class="col-md-4 text-center">
             <a href="#" data-toggle="modal" data-target="#imagenModal12">
               <img src="img/22.jpg" class="img-thumbnail" alt="Cinque Terre">
-              <p><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
+              <p><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px"> Nuevo</a></p>
             </a>
           </div>
         </div>
