--- a/servicios.html
+++ b/servicios.html
@@ -50,7 +50,7 @@
             <img src="img/30.jpg" alt="Cinque Terre" width="100%" height="500px" >
             <h3 class="text-center">Limpieza de Zapatos</h3>
             <p class="text-justify">¿Tus zapatos favoritos han perdido su brillo y se ven desgastados? Permítenos devolverles su esplendor con nuestro servicio de limpieza de zapatos. Para el cuidado del calzado utilizará técnicas y productos de calidad para eliminar manchas, suciedad y olores, dejando tus zapatos impecables y listos para lucir en cualquier ocasión. Confía en nosotros para revitalizar tus zapatos y hacerlos lucir como nuevos.</p>
-            <p class="text-center"><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px">Información</a></p>
+            <p class="text-center"><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px">Información</a></p>
           </div>
         </div>
         <div class="col-md-4">
@@ -58,7 +58,7 @@
             <img src="img/28.jpg" alt="Cinque Terre" width="100%" height="500px">
             <h3 class="text-center">Cosido de Zapatos</h3>
             <p class="text-justify">¿Tus zapatos han sufrido el paso del tiempo y se ven desgastados? No te preocupes, estamos aquí para ayudarte. Nuestro servicio de restauración de zapatos ofrece soluciones profesionales para renovar tus zapatos favoritos. Desde reparaciones de costuras y arreglos de suelas para devolverles vida y prolongar su durabilidad. Deja que nuestros especialistas restauren tus zapatos y disfruta de su apariencia renovada.</p>
-            <p class="text-center"><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px">Información</a></p>
+            <p class="text-center"><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px">Información</a></p>
           </div>
         </div>
         <div class="col-md-4">
@@ -66,7 +66,7 @@
             <img src="img/29.jpg" alt="Cinque Terre" width="100%" height="500px">
             <h3 class="text-center">Cambio de Plantas de Zapatos</h3>
             <p class="text-justify">Si tus zapatos ya no ofrecen la comodidad que solían brindarte, es posible que necesiten un cambio de plantillas y plantas. Nuestro servicio te permite revitalizar tus pies y disfrutar de una experiencia de caminar cómoda nuevamente. Nuestros expertos te asesorarán en la elección de las plantas y plantillas adecuadas para tus necesidades y se encargarán de instalarlas de manera precisa en tus zapatos.</p>
-            <p class="text-center"><a href="https://walink.co/ce8afe" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px">Información</a></p>
+            <p class="text-center"><a href="https://walink.co/78a32d" class="btn" role="button" style="background-color:#F1D8AF; color:black;"><img src="img/wtsp.png" alt="wtsp" width="25px" height="25px">Información</a></p>
           </div>
         </div>
       </div>
