--- a/contacto.html
+++ b/contacto.html
@@ -74,12 +74,12 @@
                 </tr>
                 <tr>
                     <th class="text-right">LOCAL:</th>
-                    <td><img src="img/31.jpg" alt="" width="80%" height="200px"></td>
+                    <td class="text-center"><img src="img/31.jpg" alt="" width="70%" height="150px"></td>
                 </tr>
             </table>
         </div>
         <div class="col-md-8">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d249.36053055433624!2d-78.56436830063217!3d-0.2863606819496284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d5a188df1d97d7%3A0x97c141de75a97122!2sCiaru%20Store!5e0!3m2!1ses-419!2sec!4v1684895479820!5m2!1ses-419!2sec" width="502" height="618" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d249.36053055433624!2d-78.56436830063217!3d-0.2863606819496284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d5a188df1d97d7%3A0x97c141de75a97122!2sCiaru%20Store!5e0!3m2!1ses-419!2sec!4v1684895479820!5m2!1ses-419!2sec" width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
